--- a/ui/pubspec.yaml
+++ b/ui/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   flutter_dotenv: ^5.1.0
   cupertino_icons: ^1.0.8
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
@@ -22,6 +23,4 @@ flutter:
   uses-material-design: true
   assets:
     - .env
-
-
-
+    - assets/icons/Harper logo/Harper.png
