finished login screen

--- a/ui/pubspec.yaml
+++ b/ui/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   flutter_dotenv: ^5.1.0
   cupertino_icons: ^1.0.8
   http: ^1.2.2
+  sidebarx: ^0.17.1
 
 dev_dependencies:
   flutter_test:
