initialized sast create project

--- a/ui/pubspec.yaml
+++ b/ui/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.2.2
   sidebarx: ^0.17.1
+  file_picker: ^8.1.2
 
 dev_dependencies:
   flutter_test:
